# scigateway-auth

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app.py  auth.py  config.json.example  config.py  docker-compose.yml  noxfile.py  openapi.yaml  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci-build.yml
common/: config.py  constants.py
docker/: docker-entrypoint.sh
maintenance/: maintenance.json  scheduled_maintenance.json
scigateway-auth/: app.py  openapi.yaml
scigateway-auth/common/: config.py  constants.py  exceptions.py  logger_setup.py
scigateway-auth/src/: auth.py  endpoints.py
scigateway-auth/test/: test_ICATAuthenticator.py  test_authenticationHandler.py  test_requires_mnemonic.py
scigateway_auth/: .env.example  app.py  config.json.example  main.py  wsgi.py
scigateway_auth/common/: config.py  constants.py  exceptions.py  logger_setup.py  schemas.py
scigateway_auth/routers/: authentication.py  maintenance.py
scigateway_auth/src/: admin.py  auth.py  authentication.py  endpoints.py  icat_client.py  jwt_handler.py  maintenance.py  oidc.py  oidc_handler.py
src/: admin.py  auth.py  endpoints.py
test/: mock_data.py  pytest.ini  test_ICATAuthenticator.py  test_authentication.py  test_authenticationHandler.py  test_config.py  test_icat_client.py  test_jwt_handler.py  test_maintenance.py  test_maintenance_mode.py  test_oidc.py  test_requires_mnemonic.py  test_scheduled_maintenance_mode.py  testutils.py
test/keys/: jwt-key  jwt-key.pub
