[tool.poetry]
name = "scigateway-auth"
version = "0.1.0"
description = "Authentication API for the SciGateway web application"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/ral-facilities/scigateway-auth"
repository = "https://github.com/ral-facilities/scigateway-auth"
authors = [
    "Alan Kyffin <alan.kyffin@stfc.ac.uk>",
    "Alejandra Gonzalez Beltran <alejandra.gonzalez-beltran@stfc.ac.uk>",
    "Goel Biju",
    "Keiran Price <keiran.price@stfc.ac.uk>",
    "Louise Davies <louise.davies@stfc.ac.uk>",
    "Matthew Richards <matthew.richards@stfc.ac.uk>",
    "Patrick Austin <patrick.austin@stfc.ac.uk>",
    "Viktor Bozhinov <viktor.bozhinov@stfc.ac.uk>"
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.4"
PyJWT = "^2.9.0"
cryptography = "^43.0.3"
pyOpenSSL = "^24.2.1"
jsonschema = "^4.23.0"
fastapi = {version = "0.115.4", extras = ["all"]}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.4"
pytest-cov = "^5.0.0"
flake8 = "^7.1.1"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-broken-line = "^1.0.0"
flake8-bugbear = "^24.8.19"
flake8-builtins = "^2.5.0"
flake8-commas = "^4.0.0"
flake8-comprehensions = "^3.15.0"
flake8-import-order = "^0.18.2"
flake8-logging-format = "^1.0.0"
pep8-naming = "^0.14.1"
black = "^24.10.0"
safety = "^3.2.10"
pytest-env = "^1.1.5"

[tool.poetry.scripts]

[build-system]
requires = ["poetry-core>=1.9.1"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["scigateway_auth"]

[tool.coverage.run]
branch = true
source = ["scigateway_auth"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 120
