[project]
name = "scigateway-auth"
version = "0.1.0"
description = "Authentication API for the SciGateway web application"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.11,<4.0"
authors = [
    { name = "Alan Kyffin", email = "alan.kyffin@stfc.ac.uk" },
    { name = "Alejandra Gonzalez Beltran", email = "alejandra.gonzalez-beltran@stfc.ac.uk" },
    { name = "Goel Biju" },
    { name = "Keiran Price", email = "keiran.price@stfc.ac.uk" },
    { name = "Louise Davies", email = "louise.davies@stfc.ac.uk" },
    { name = "Matthew Richards", email = "matthew.richards@stfc.ac.uk" },
    { name = "Patrick Austin", email = "patrick.austin@stfc.ac.uk" },
    { name = "Viktor Bozhinov", email = "viktor.bozhinov@stfc.ac.uk" },
]
dependencies = [
    "requests (>=2.32,<3.0)",
    "PyJWT (>=2.9,<3.0)",
    "cryptography (>=43.0)",
    "fastapi[all] (>=0.123)",
    "cachetools (>=6.2)",
]

[project.urls]
homepage = "https://github.com/ral-facilities/scigateway-auth"
repository = "https://github.com/ral-facilities/scigateway-auth"

[tool.poetry]
requires-poetry = ">=2.0,<3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.4"
pytest-cov = "^5.0.0"
flake8 = "^7.1.1"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-broken-line = "^1.0.0"
flake8-bugbear = "^24.8.19"
flake8-builtins = "^2.5.0"
flake8-commas = "^4.0.0"
flake8-comprehensions = "^3.15.0"
flake8-import-order = "^0.18.2"
flake8-logging-format = "^1.0.0"
pep8-naming = "^0.14.1"
black = "^24.10.0"
safety = "^3.2.10"
pytest-env = "^1.1.5"

[build-system]
requires = ["poetry-core>=2.0,<3.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["scigateway_auth"]

[tool.coverage.run]
branch = true
source = ["scigateway_auth"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 120
